--- a/template/index.html
+++ b/template/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paste &mdash; River.sh</title>
+    <title>Pasteful &mdash; River.sh</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css"></link>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/ayu-mirage.min.css"></link>
     <style>
+        @font-face {
+            font-family: "JetBrains Mono";
+            src: url("./font/JetBrainsMono-Bold.woff2") format("woff2");
+        }
+
         * {
             box-sizing: border-box;
         }
@@ -17,7 +24,7 @@
 
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 16px;
+            font-size: 14px;
             background-color: #f9e2c8;
             margin: 1em auto;
             width: 980px;
@@ -32,6 +39,7 @@
             color: #008b8b;
             font-weight: bold;
             text-decoration: none;
+            text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
         }
 
         .header .left .sub {
@@ -52,38 +60,55 @@
             background-color: white;
             border: 2px solid #7f7f7f;
             border-radius: 0%;
-            outline: none;
+            outline: rgba(0, 139, 139, 1);
             resize: none;
             width: 50%;
-            font-size: 16px;
+            font-size: 1rem;
             padding: 0.5rem;
         }
 
-        .form-control:focus {
+        .form-select {
+            background-color: white;
+            border: 2px solid #7f7f7f;
+            border-radius: 0%;
+            outline: rgba(0, 139, 139, 1);
+            font-size: 1rem;
+            padding: 0.5rem;
+        }
+
+        .form-control:focus,
+        .form-select:focus {
             border: 2px solid #008b8b;
         }
 
-        .paste-title {
+        .pasteful-title,
+        .pasteful-reference {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             display: block;
             margin: 0 auto;
             width: 100%;
-            font-size: 20px;
             margin-bottom: 1.5em;
+            resize: vertical;
         }
 
-        .paste-filename {
-            width: 400px;
+        .pasteful-filename,
+        .pasteful-reference {
+            display: block;
+            width: 700px;
+            margin-bottom: 0;
         }
 
-        .CodeMirror pre.CodeMirror-line, .CodeMirror pre.CodeMirror-line-like {
-            font-family: 'JetBrains Mono', monospace !important;
-        }
-
-        textarea,
-        .CodeMirror *,
-        .cm-s-ayu-mirage.CodeMirror {
-            font-family: 'JetBrains Mono', monospace !important;
+        .code,
+        .CodeMirror * {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 14px;
             border: none;
+        }
+
+        .form-section-sub {
+            display: flex;
+            align-items: end;
+            justify-content: space-between;
         }
     </style>
 </head>
@@ -96,28 +121,73 @@
     </header>
 
     <main class="container">
-        <input type="text" class="form-control paste-title" name="title" placeholder="Paste title or description...">
-        <input type="text" class="form-control paste-filename" aria-label="Filename including extension..." name="filename" value="" placeholder="Filename including extension...">
-        <textarea class="form-control" id="code" name="code" placeholder="put your code here..." autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">package main
+        <textarea rows="4" class="form-control pasteful-title" placeholder="Enter a description of this pasteful snippet [Markdown supported]..."></textarea>
+        <div class="form-section">
+            <div class="form-section-sub">
+                <div class="left">
+                    <input type="text" class="form-control pasteful-filename" aria-label="Filename including extension..." name="filename" value="" placeholder="Filename including extension...">
+                    <textarea rows="4" class="form-control pasteful-reference" aria-label="Add a description for reference..." name="reference" placeholder="Add a description for reference..."></textarea>
+                </div>
+                
+                <div class="right">
+                    <select class="form-select select-sm js-code-indent-mode" aria-label="Indent mode">
+                        <optgroup label="Indent mode">
+                            <option value="space">Spaces</option>
+                            <option value="tab">Tabs</option>
+                        </optgroup>
+                    </select>
+                    <select class="form-select select-sm js-code-indent-width" aria-label="Indent size">
+                        <optgroup label="Indent size">
+                            <option value="2">2</option>
+                            <option value="4">4</option>
+                            <option value="8">8</option>
+                        </optgroup>
+                    </select>
+                </div>
+            </div>
+            
+            <textarea rows="10" class="form-control code" name="code" placeholder="put your code here" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">package main
 
 func main() {
-    doTheCoolThing();     // it's PRETTY cool, imho
-}</textarea>
+    fmt.Println("Hello")
+}
+            </textarea>
+        </div>
     </main>
 
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/go/go.min.js"></script>
 
     <script>
-        var editor = CodeMirror.fromTextArea(document.getElementById('code'), {
-            lineNumbers: true,
-            mode: 'text/x-go',
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll('.code').forEach(element => {
+                var editor = CodeMirror.fromTextArea(element, {
+                    lineNumbers: true,
+                    mode: 'text/x-go',
+                });
+
+                editor.setOption('theme', 'ayu-mirage')
+                // editor.setOption('extraKeys', {
+                //     Tab: betterTab
+                // })
+                editor.setOption("indentUnit", "\t")
+            });
         });
 
-        document.addEventListener("DOMContentLoaded", () => {
-            // editor.setOption('theme', 'ayu-mirage')
-            document.querySelector('.CodeMirror *').style.fontFamily = "'JetBrains Mono' monospace"
-        });
+        function betterTab(cm) {
+            // if (cm.somethingSelected()) {
+            //     cm.indentSelection("add");
+            // } else {
+            //     cm.replaceSelection(cm.getOption("indentWithTabs")? "\t":
+            //     Array(cm.getOption("indentUnit") + 1).join(" "), "end", "+input");
+            // }
+
+            // if (cm.somethingSelected()) {
+            //     cm.indentSelection("add");
+            // } else {
+            //     cm.replaceSelection(!cm.getOption("indentWithTabs") ? "\t" : Array(cm.getOption("indentUnit") + 1).join(" "), "end", "+input")
+            // }
+        }
 
 CodeMirror.modeInfo = [
     {name: "APL", mime: "text/apl", mode: "apl", ext: ["dyalog", "apl"]},
