Move font to the project root

--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: "JetBrains Mono";
-            src: url("./font/JetBrainsMono-Bold.woff2") format("woff2");
+            src: url("/static/font/JetBrainsMono-Bold.woff2") format("woff2");
         }
 
         * {
