--- a/template/index.html
+++ b/template/index.html
@@ -65,6 +65,7 @@
         }
 
         .form-control {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background-color: white;
             border: 3px solid #7f7f7f;
             border-radius: 4px;
@@ -76,6 +77,7 @@
         }
 
         .form-select {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             width: 120px;
             background-color: white;
             border: 3px solid #7f7f7f;
@@ -102,6 +104,11 @@
             width: 100%;
             margin-bottom: 3em;
             resize: vertical;
+        }
+
+        .pasteful-url {
+            width: 100%;
+            margin-bottom: 1em;
         }
 
         .pasteful-filename,
@@ -143,11 +150,12 @@
     </header>
 
     <main class="container">
-        <textarea rows="6" name="title" class="form-control pasteful-title" placeholder="Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
+        <input type="text" name="url" class="form-control pasteful-url" aria-label="Enter a URL path: my-code-snippet" placeholder="Enter a URL path: my-code-snippet">
+        <textarea rows="6" name="description" class="form-control pasteful-title" placeholder="Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
         <div class="form-section">
             <div class="form-section-sub">
                 <div class="left">
-                    <input type="text" class="form-control pasteful-filename" aria-label="Filename including extension..." name="filename" value="" placeholder="Filename including extension...">
+                    <input type="text" class="form-control pasteful-filename" aria-label="Filename including extension..." name="filename" placeholder="Filename including extension...">
                     <textarea rows="3" class="form-control pasteful-reference" aria-label="Add a description for reference..." name="reference" placeholder="Add a description for reference (Markdown supported)..."></textarea>
                 </div>
                 
