--- a/template/index.html
+++ b/template/index.html
@@ -176,51 +176,68 @@
                 </div>
             </div>
             
-            <textarea rows="10" class="form-control code" name="code" placeholder="put your code here" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">package main
-
-func main() {
+            <textarea rows="10" class="form-control code" name="code" placeholder="put your code here" name="code">func main()
+{
     fmt.Println("Hello")
 }</textarea>
         </div>
     </main>
 
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
+    <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/addon/edit/matchbrackets.min.js"></script>
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/go/go.min.js"></script>
 
     <script>
-        let codeEditor = document.querySelectorAll('.code')
-
         document.addEventListener("DOMContentLoaded", () => {
-            codeEditor.forEach(element => {
-                let editor = CodeMirror.fromTextArea(element, {
-                    lineNumbers: true,
-                    mode: 'text/x-go',
-                })
+            let editor = selectCodeEditor()
+            editor.forEach(element => {
+                editorConfig(element)
+            })
 
-                editor.setOption('theme', 'ayu-mirage')
-                editor.setOption('extraKeys', DefaultKeyMappings)
-
-                let indentModeControl = element.parentElement.querySelectorAll('.code-indent-mode')
-                let indentWidthControl = element.parentElement.querySelectorAll('.code-indent-width')
-
-                editor.setOption('tabSize', parseInt(indentWidthControl[0].value))
-                editor.setOption('indentUnit', parseInt(indentWidthControl[0].value))
-                editor.setOption('indentWithTabs', indentModeControl[0].value !== 'space')
-
-                indentWidthControl.forEach(indentWidthElement => {
-                    indentWidthElement.addEventListener('change', () => {
-                        editor.setOption('tabSize', parseInt(indentWidthElement.value))
-                        editor.setOption('indentUnit', parseInt(indentWidthElement.value))
-                    })
-                })
-
-                indentModeControl.forEach(indentModeElement => {
-                    indentModeElement.addEventListener('change', () => {
-                        editor.setOption('indentWithTabs', indentModeElement.value !== 'space')
-                    })
-                })
+            let codemirror = selectCodeMirror()
+            codemirror.forEach(element => {
+                element.setAttribute('name', 'codemirror_editor')
             })
         })
+
+        const selectCodeEditor = () => {
+            return document.querySelectorAll('.code')
+        }
+
+        const selectCodeMirror = () => {
+            return document.querySelectorAll('.CodeMirror textarea')
+        }
+
+        const editorConfig = (element) => {
+            let editor = CodeMirror.fromTextArea(element, {
+                lineNumbers: true,
+                matchBrackets: true,
+                mode: 'text/x-go',
+            })
+
+            editor.setOption('theme', 'ayu-mirage')
+            editor.setOption('extraKeys', DefaultKeyMappings)
+
+            let indentModeControl = element.parentElement.querySelectorAll('.code-indent-mode')
+            let indentWidthControl = element.parentElement.querySelectorAll('.code-indent-width')
+
+            editor.setOption('tabSize', parseInt(indentWidthControl[0].value))
+            editor.setOption('indentUnit', parseInt(indentWidthControl[0].value))
+            editor.setOption('indentWithTabs', indentModeControl[0].value !== 'space')
+
+            indentWidthControl.forEach(indentWidthElement => {
+                indentWidthElement.addEventListener('change', () => {
+                    editor.setOption('tabSize', parseInt(indentWidthElement.value))
+                    editor.setOption('indentUnit', parseInt(indentWidthElement.value))
+                })
+            })
+
+            indentModeControl.forEach(indentModeElement => {
+                indentModeElement.addEventListener('change', () => {
+                    editor.setOption('indentWithTabs', indentModeElement.value !== 'space')
+                })
+            })
+        }
 
         const DISALLOW_LINKYFY_ON_PASTE = new WeakMap()
         const FOCUS_TRAP_DISABLED = new WeakMap()
