--- a/template/index.html
+++ b/template/index.html
@@ -12,11 +12,6 @@
             src: url("/static/font/JetBrainsMono-Bold.woff2") format("woff2");
         }
 
-        @font-face {
-            font-family: "Paytone One";
-            src: url("/static/font/PaytoneOne.woff2") format("woff2");
-        }
-
         * {
             box-sizing: border-box;
         }
@@ -28,11 +23,10 @@
         }
 
         body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            font-size: 14px;
-            background-color: #ece5da;
+            font-family: Verdana, sans-serif;
+            font-size: 16px;
             margin: 1em auto;
-            width: 980px;
+            width: 800px;
         }
 
         a {
@@ -44,14 +38,10 @@
         }
 
         .header .left .logo {
-            font-family: 'Paytone One', sans-serif;
-            font-size: 60px;
-            line-height: 60px;
-            letter-spacing: 2px;
-            color: #f1ebe5;
-            font-weight: bold;
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 1.5rem;
+            color: #008b8b;
             text-decoration: none;
-            text-shadow: 0 10.36px 8.896px #c4b59d,0 -2px 1px #fff;
         }
 
         .header .left .sub {
@@ -64,62 +54,36 @@
             text-decoration: underline;
         }
 
-        .form-control {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: white;
-            border: 3px solid #7f7f7f;
-            border-radius: 4px;
-            outline: rgba(0, 139, 139, 1);
-            resize: none;
-            width: 50%;
-            font-size: 1rem;
-            padding: 0.5rem;
-        }
-
+        .form-control,
         .form-select {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            width: 120px;
-            background-color: white;
-            border: 3px solid #7f7f7f;
-            border-radius: 4px;
-            outline: rgba(0, 139, 139, 1);
+            font-family: Verdana, sans-serif;
+            font-size: 16px;
+            background-color: #f2f2f2;
+            border: none;
+            resize: none;
+            outline: none;
+            width: 100%;
             font-size: 1rem;
             padding: 0.5rem;
-        }
-
-        .form-select:first-child {
-            margin-right: 0.2em;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            border: 3px solid #008b8b;
-        }
-
-        .pasteful-title,
-        .pasteful-reference {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            display: block;
-            margin: 0 auto;
-            width: 100%;
-            margin-bottom: 3em;
-            resize: vertical;
-        }
-
-        .pasteful-url {
-            width: 100%;
             margin-bottom: 1em;
         }
 
-        .pasteful-filename,
-        .pasteful-reference {
-            display: block;
-            width: 700px;
-            margin-bottom: 0;
+        textarea.form-control {
+            resize: vertical;
         }
 
-        .pasteful-reference {
-            margin-top: 1em;
+        .form-section {
+            margin: 3em 0;
+        }
+
+        .form-section-sub {
+            display: flex;
+            align-items: end;
+            justify-content: space-between;
+        }
+
+        .form-section-sub .left {
+            width: 70%;
         }
 
         .code,
@@ -127,17 +91,6 @@
             font-family: 'JetBrains Mono', monospace;
             font-size: 14px;
             border: none;
-        }
-
-        .CodeMirror {
-            border-radius: 4px;
-            margin-top: 1em;
-        }
-
-        .form-section-sub {
-            display: flex;
-            align-items: end;
-            justify-content: space-between;
         }
     </style>
 </head>
@@ -150,23 +103,23 @@
     </header>
 
     <main class="container">
-        <input type="text" name="url" class="form-control pasteful-url" aria-label="Enter a URL path: my-code-snippet" placeholder="Enter a URL path: my-code-snippet">
+        <input type="text" name="url" class="form-control pasteful-url" placeholder="* Enter a URL path: my-code-snippet">
         <textarea rows="6" name="description" class="form-control pasteful-title" placeholder="Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
         <div class="form-section">
             <div class="form-section-sub">
                 <div class="left">
-                    <input type="text" class="form-control pasteful-filename" aria-label="Filename including extension..." name="filename" placeholder="Filename including extension...">
-                    <textarea rows="3" class="form-control pasteful-reference" aria-label="Add a description for reference..." name="reference" placeholder="Add a description for reference (Markdown supported)..."></textarea>
+                    <input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension...">
+                    <textarea rows="3" class="form-control pasteful-reference" name="reference" placeholder="Add a description for reference (Markdown supported)..."></textarea>
                 </div>
                 
                 <div class="right">
-                    <select name="indent_mode" class="form-select code-indent-mode" aria-label="Indent mode">
+                    <select name="indent_mode" class="form-select code-indent-mode">
                         <optgroup label="Indent mode">
                             <option value="space" selected>Spaces</option>
                             <option value="tab">Tabs</option>
                         </optgroup>
                     </select>
-                    <select name="indent_size" class="form-select code-indent-width" aria-label="Indent size">
+                    <select name="indent_size" class="form-select code-indent-width">
                         <optgroup label="Indent size">
                             <option value="2">2</option>
                             <option value="4">4</option>
