Style modification on landing and editor pages

--- a/template/index.html
+++ b/template/index.html
@@ -25,12 +25,15 @@
         body {
             font-family: Verdana, sans-serif;
             font-size: 16px;
+            line-height: 1.5;
             margin: 1em auto;
             width: 800px;
         }
 
         a {
+            font-size: inherit;
             color: #008b8b;
+            font-weight: 600;
         }
 
         .header {
@@ -97,7 +100,7 @@
 <body>
     <header class="header">
         <div class="left">
-            <a href="/" class="logo">Pasteful</a>
+            <a href="https://pasteful.org" class="logo">Pasteful</a>
             <div class="sub">from <a href="https://river.sh">River.sh</a></div>
         </div>
     </header>
