--- a/template/index.html
+++ b/template/index.html
@@ -60,7 +60,9 @@
         }
 
         textarea.form-control {
-            resize: vertical;
+            overflow-y: hidden;
+            overflow-x: auto;
+            resize: none;
         }
 
         .form-section {
@@ -69,6 +71,13 @@
 
         .form-title {
             margin-bottom: 0.5em;
+        }
+
+        textarea.form-control.code {
+            font-family: 'JetBrains Mono', monospace;
+            color: #444;
+            font-size: 0.9rem;
+            
         }
 
         .button {
@@ -94,17 +103,23 @@
         <div class="banner-form">
             <div class="form-title">Add the necessary meta information:</div>
             <input type="text" name="url" class="form-control pasteful-url" placeholder="* Enter a URL path: my-code-snippet">
-            <textarea rows="6" name="description" class="form-control pasteful-title" placeholder="optional: Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
+            <textarea onkeyup="textAreaAdjust(this)"  name="description" class="form-control pasteful-title" placeholder="optional: Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
         </div>
 
         <div class="form-section">
             <div class="form-title">Start creating snippet below:</div>
             <input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension...">
-            <textarea rows="3" class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference (Markdown supported)..."></textarea>
+            <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference (Markdown supported)..."></textarea>
             
-            <textarea rows="10" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>
+            <textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>
             <button class="button" type="button"><span>+</span> Add new file</button>
         </div>
     </main>
+    <script>
+        function textAreaAdjust(element) {
+            element.style.height = "1px";
+            element.style.height = (25+element.scrollHeight)+"px";
+        }
+    </script>
 </body>
 </html>
