--- a/template/index.html
+++ b/template/index.html
@@ -137,14 +137,14 @@
         <div class="banner-form">
             <div class="form-title">Add the necessary meta information:</div>
             <input type="text" name="url" class="form-control pasteful-url" placeholder="* Enter a URL path: my-code-snippet">
-            <textarea onkeyup="textAreaAdjust(this)"  name="description" class="form-control pasteful-title" placeholder="optional: Enter a description of this pasteful snippet (Markdown supported)..."></textarea>
+            <textarea onkeyup="textAreaAdjust(this)"  name="description" class="form-control pasteful-title" placeholder="optional: Enter a description of this pasteful snippet..."></textarea>
         </div>
 
         <div id="snippet">
             <div class="form-section">
                 <div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div>
                 <input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension...">
-                <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference (Markdown supported)..."></textarea>
+                <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference..."></textarea>
                 
                 <textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>
             </div>
@@ -165,7 +165,7 @@
         }
 
         function addNewFile() {
-            const innerString = '<div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div><input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension..."><textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference (Markdown supported)..."></textarea><textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>'
+            const innerString = '<div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div><input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension..."><textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference..."></textarea><textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>'
             const outerDiv = document.createElement("div")
             outerDiv.className = "form-section"
             outerDiv.innerHTML = innerString
