Update placeholder text

--- a/template/index.html
+++ b/template/index.html
@@ -136,17 +136,17 @@
     <main class="container">
         <div class="banner-form">
             <div class="form-title">Add the necessary meta information:</div>
-            <input type="text" name="url" class="form-control pasteful-url" placeholder="* Enter a URL path: my-code-snippet">
-            <textarea onkeyup="textAreaAdjust(this)"  name="description" class="form-control pasteful-title" placeholder="optional: Enter a description of this pasteful snippet..."></textarea>
+            <input type="text" name="url" class="form-control pasteful-url" placeholder="*Enter a URL path: my-code-snippet">
+            <textarea onkeyup="textAreaAdjust(this)"  name="description" class="form-control pasteful-title" placeholder="Enter a description of this pasteful snippet..."></textarea>
         </div>
 
         <div id="snippet">
             <div class="form-section">
                 <div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div>
-                <input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension...">
-                <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference..."></textarea>
+                <input type="text" class="form-control pasteful-filename" name="filename" placeholder="*Filename including extension...">
+                <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="Add a description for reference..."></textarea>
                 
-                <textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>
+                <textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="*Put your code here..." name="code"></textarea>
             </div>
         </div>
 
