--- a/template/index.html
+++ b/template/index.html
@@ -218,7 +218,29 @@
         }
 
         function addNewFile() {
-            const innerString = '<div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div><input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension..."><textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference..."></textarea><textarea onkeyup="textAreaAdjust(this)" class="form-control code" name="code" placeholder="* Put your code here..." name="code"></textarea>'
+            const innerString = `
+            <div class="form-title">Start creating snippet below: <span class="right"><button class="button button-delete" type="button" onclick="deleteFile(this)"><span>x</span> Delete</button></span></div>
+            <input type="text" class="form-control pasteful-filename" name="filename" placeholder="* Filename including extension...">
+            <textarea onkeyup="textAreaAdjust(this)"  class="form-control pasteful-reference" name="reference" placeholder="optional: Add a description for reference..."></textarea>
+            
+            <div class="form-select">
+                <select aria-label="Indent mode" class="indent-type">
+                    <optgroup label="Indent mode">
+                        <option value="space">Spaces</option>
+                        <option value="tab">Tabs</option>
+                    </optgroup>
+                </select>
+                <select aria-label="Indent size" class="indent-size">
+                    <optgroup label="Indent size">
+                        <option value="2">2</option>
+                        <option value="4">4</option>
+                        <option value="8">8</option>
+                    </optgroup>
+                </select>
+            </div>
+            
+            <textarea onkeyup="textAreaAdjust(this)" onkeydown="handleTabs.call(this, event)" class="form-control code" name="code" placeholder="*Put your code here..." name="code"></textarea>`
+            
             const outerDiv = document.createElement("div")
             outerDiv.className = "form-section"
             outerDiv.innerHTML = innerString
