Style update for form-action

--- a/template/index.html
+++ b/template/index.html
@@ -100,17 +100,13 @@
         }
 
         .button, select {
-            padding: 0.5em;
+            height: 2em;
             border: 2px solid #2b5a5a;
             background-color: #f0f0f0;
             font-size: 1rem;
             color: inherit;
             cursor: pointer;
             outline: none;
-        }
-
-        select {
-            padding: 0.2em;
         }
 
         .button:hover {
